@@ -93,24 +93,19 @@ public class MergeManager {
     }
 
     private String safeStatusLabel(TableItem t) {
-        // 1. Check null ngay đầu vào
         if (t == null) return "Khả dụng";
-
-        // 2. Ưu tiên hiển thị statusDisplay nếu có
-        // Dùng isBlank() (Java 11+) tốt hơn trim().isEmpty()
         String disp = t.getStatusDisplay();
-        if (disp != null && !disp.isBlank()) {
+        if (disp != null && !disp.trim().isEmpty()) {
             return disp.trim();
         }
-
-        // 3. Check null cho status
         TableItem.Status st = t.getStatus();
         if (st == null) return "Khả dụng";
 
-        // 4. Switch case gọn gàng
         switch (st) {
             case OCCUPIED:
                 return "Đã có khách";
+            case AVAILABLE:
+                return "Khả dụng";
             case RESERVED:
                 return "Đã được đặt trước";
             case PENDING_PAYMENT:
